set sonar.scanner.javaOpts with the --add-exports options